# hunk

./: AGENTS.md  COMMIT_WORKFLOW_TODO.md  Cargo.toml  DIFF_VIEW_QUALITY_TODO.md  FULL_FILE_TREE_TODO.md  PERFORMANCE_TODO.md  README.md  TODO.md  bacon.toml  flake.nix  justfile  skills-lock.json  test.md
.codex/: config.toml
.github/workflows/: adhoc-linux-zed-like.yml  adhoc-release-assets.yml  pr-build.yml  (+2 more)
crates/hunk-git/: Cargo.toml
crates/hunk-git/src/: branch.rs  command_env.rs  compare.rs  git.rs  history.rs  lib.rs  mutation.rs  network.rs  path.rs  worktree.rs
crates/hunk-git/src/git/: patch.rs  snapshot.rs  tree.rs  workspace.rs
crates/hunk-git/tests/: branch_ops.rs  command_env.rs  history_ops.rs  ignore_paths.rs  mutation_ops.rs  network_ops.rs  read_path.rs  repo_discovery.rs  worktree_ops.rs
docs/: AI_CODEX_SPEC.md  AI_TERMINAL_SUPPORT_PLAN.md  DIFF_COMMENTS_TODO.md  DIFF_VIEWER_IMPLEMENTATION_PLAN.md  DIFF_VIEW_QUALITY_TODO.md  FILES_EDITOR_APPEARANCE_AND_THEME_PLAN.md  FILES_HELIX_EDITOR_IMPLEMENTATION_PLAN.md  FULL_FILE_TREE_TODO.md  GHOSTTY_TERMINAL_MIGRATION_IMPLEMENTATION_PLAN.md  GIT_MIGRATION_IMPLEMENTATION_PLAN.md  GIT_WORKTREES_IMPLEMENTATION_PLAN.md  HUNK_EDITOR_REPLACEMENT_IMPLEMENTATION_PLAN.md  JJ_GRAPH_WORKSPACES_GUIDE.md  JJ_GRAPH_WORKSPACES_TODO.md  JJ_GRAPH_WORKSPACE_RFC.md  JJ_NATIVE_MODE_SPEC.md  JJ_TASK_WORKSPACE_MODE_TODO.md  JJ_TREE_MODE_PLAN.md  JJ_WORKSPACE_RFC.md  LANGUAGE_SUPPORT_EXPANSION_PLAN.md  Lessons Learned.md  OTA_UPDATE_DEPLOYMENT.md  PERFORMANCE_BENCHMARK.md  PERFORMANCE_TODO.md  RELEASE_RUNTIME_BLOAT_CLEANUP_PLAN.md  TREE_SITTER_MIGRATION_PLAN.md  ZED_EDITOR_ARCHITECTURE_PORT_TODO.md
flatpak/: io.github.BlixtWallet.Hunk.yaml
scripts/: build_flatpak.sh  build_linux.sh  build_macos_icon.sh  build_windows.sh  create_large_diff_repo.sh  download_codex_runtime_unix.sh  download_codex_runtime_windows.ps1  generate_diff_icons.py  inject_codex_runtime_into_macos_bundle.sh  linux_release_common.sh  package_linux_release.sh  package_linux_release_zed_like.sh  package_macos_release.sh  package_windows_release.ps1  resolve_cargo_target_dir.sh  resolve_codex_release_tag.sh  resolve_helix_runtime_dir.sh  resolve_hunk_version.sh  run_perf_harness.sh  run_windows_dev.ps1  run_with_linux_graphics_env.sh  run_with_macos_sdk_env.sh  smoke_test_linux_system_package.sh  stage_codex_runtime_macos.sh  validate_release_bundle_layout.sh  validate_windows_release_bundle.ps1
src/: app.rs  config.rs  diff.rs  git.rs  jj.rs  lib.rs  main.rs  markdown_preview.rs
tests/: app_config_shortcuts.rs  app_state.rs  comment_anchor_hash.rs  comment_clipboard_format.rs  comment_remap_status.rs  db_comments_store.rs  diff_parser.rs  file_preview_syntax_segments.rs  git_branch_name.rs  git_stage_unstage.rs  jj_auto_init.rs  jj_branch_checkout_workflow.rs  jj_branch_name.rs  jj_commit_signing_workflow.rs  jj_commit_workflow.rs  jj_graph_bookmark_actions.rs  jj_graph_bookmark_chain.rs  jj_graph_drag_drop_validation.rs  jj_graph_snapshot.rs  jj_graph_tree_layout.rs  jj_nested_repo.rs  jj_operation_history.rs  jj_sync_workflow.rs  markdown_preview_parser.rs  performance_harness.rs  repo_tree.rs
(+367 files in other folders)
