[package]
name = "hunk"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Hunk"
identifier = "com.prodata.hunk"
short_description = "Fast git diff viewer."
long_description = "A fast, simple git diff viewer built with GPUI."
category = "public.app-category.developer-tools"
icon = ["assets/icons/Hunk.icns"]

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
git2 = { version = "0.20.4", features = ["https", "ssh"] }
gpui = { package = "gpui", version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
