[package]
name = "hunk"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Hunk"
identifier = "com.prodata.hunk"
short_description = "Fast JJ diff viewer."
long_description = "A fast, simple JJ diff viewer built with GPUI."
category = "public.app-category.developer-tools"
icon = ["assets/icons/Hunk.icns"]

[dependencies]
anyhow = "1.0"
dirs = "6.0"
futures = "0.3"
gpui = { package = "gpui", version = "*", features = ["runtime_shaders"] }
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"
jj-lib = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect = "5.3"
