[package]
name = "hunk"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Hunk"
identifier = "com.prodata.hunk"
short_description = "Fast JJ diff viewer."
long_description = "A fast, simple JJ diff viewer built with GPUI."
category = "public.app-category.developer-tools"
icon = ["assets/icons/Hunk.icns"]

[dependencies]
anyhow = "1.0"
dirs = "6.0"
futures = "0.3"
gix = { version = "0.78.0", default-features = false }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
  "tree-sitter-languages",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
jj-lib = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
notify = "8.2.0"
toml = "0.9"
markdown = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect = "5.3"
rusqlite = { version = "0.37", features = ["bundled"] }
