[package]
name = "hunk-git"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
gix = { version = "0.78.0", default-features = false, features = ["parallel", "revision", "status"] }
git2 = { version = "0.20", features = ["https", "ssh"] }
hunk-domain = { path = "../hunk-domain" }

[dev-dependencies]
tempfile = "3.17"
